--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
     <!-- Global container -->
     <div class="container mx-auto max-w-7xl p-2 md:p-10">
       <!-- Grid container -->
-      <div class="text-white">
+      <div
+        class="grid grid-cols-1 gap-6 text-white md:grid-cols-4 md:grid-rows-2"
+      >
         <!-- Box 1 -->
-        <div class="relative rounded-xl bg-purple-700 p-10">
+        <div class="relative rounded-xl bg-purple-700 p-10 md:col-span-2">
           <!-- Quotes image -->
           <img
             src="images/bg-pattern-quotation.svg"
@@ -87,7 +89,9 @@
         </div>
 
         <!-- Box 3 -->
-        <div class="hidden rounded-xl bg-white p-10 text-gray-900">
+        <div
+          class="hidden rounded-xl bg-white p-10 text-gray-900 md:row-span-2 md:block"
+        >
           <!-- Box header -->
           <div class="flex space-x-4">
             <img
@@ -151,7 +155,7 @@
         </div>
 
         <!-- Box 5 -->
-        <div class="rounded-xl bg-gray-900 p-10">
+        <div class="rounded-xl bg-gray-900 p-10 md:col-span-2">
           <!-- Box header -->
           <div class="flex space-x-4">
             <img
@@ -184,7 +188,7 @@
         </div>
 
         <!-- Box 6 -->
-        <div class="rounded-xl bg-white p-10 text-gray-900">
+        <div class="rounded-xl bg-white p-10 text-gray-900 md:hidden">
           <!-- Box header -->
           <div class="flex space-x-4">
             <img
